--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
             <div class="producto">
                 <div>
-                    <img class=fotoproducto src="/assets/img/hamburguesa500g.jpg" alt="foto hamburguesa italiana">
+                    <img class=fotoproducto src="assets/img/hamburguesa500g.jpg" alt="foto hamburguesa italiana">
                 </div>
                 <div>
                     <h2>"LA GRANDE" a $5.990</h2>
@@ -33,7 +33,7 @@
 
             <div class="producto">
                 <div>
-                    <img class=fotoproducto src="/assets/img/completogigante.jpg" alt="foto completo gigante">
+                    <img class=fotoproducto src="assets/img/completogigante.jpg" alt="foto completo gigante">
                 </div>
                 <div>
                     <h2 id="h2completo">"COMPLETO 3XL" a $3.990</h2>
@@ -44,7 +44,7 @@
 
             <div class="producto">
                 <div>
-                    <img class=fotoproducto src="/assets/img/chorrillana.jpg" alt="foto chorrillana">
+                    <img class=fotoproducto src="assets/img/chorrillana.jpg" alt="foto chorrillana">
                 </div>
                 <div>
                     <h2>"MAXI-CHORRILLANA" a $4.990</h2>
